// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SupervisorList renders with multiple supervisors 1`] = `
<DocumentFragment>
  <div
    class="__InlineList__"
    data-testid="inline-data-list"
  >
    <span
      class=""
    >
      Supervisors: 
    </span>
    <ul>
      <li>
        <div
          class="di"
        >
          <span>
            John Doe
          </span>
        </div>
        , 
      </li>
      <li>
        <div
          class="di"
        >
          <span>
            Jane Doe
          </span>
        </div>
      </li>
    </ul>
  </div>
</DocumentFragment>
`;

exports[`SupervisorList renders with one supervisor 1`] = `
<DocumentFragment>
  <div
    class="__InlineList__"
    data-testid="inline-data-list"
  >
    <span
      class=""
    >
      Supervisor: 
    </span>
    <ul>
      <li>
        <div
          class="di"
        >
          <span>
            John Doe
          </span>
        </div>
      </li>
    </ul>
  </div>
</DocumentFragment>
`;
